--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   basic:
-    runs-on: [ self-hosted ]
+    runs-on: [ ubuntu-20.04 ]
     steps:
       - name: Store context in variable
         env:
